<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.com.technologyworld.ProductsActivity">

    <TextView
        android:id="@+id/choose_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/select_text"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/choose_product">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/pc"
                android:contentDescription="@string/desktop"
                android:src="@drawable/a1_pc"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_toRightOf="@id/pc"
                android:text="@string/desktop"
                android:contentDescription="@string/description_pc"
                android:onClick="onClickShowAlert1"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/iphone"
                android:contentDescription="@string/iphone"
                android:src="@drawable/a2_tlf"
                android:layout_below="@id/pc"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pc"
                android:layout_toRightOf="@id/iphone"
                android:onClick="onClickShowAlert2"
                android:padding="35dp"
                android:text="@string/iphone"
                android:contentDescription="@string/description_phone"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/laptop"
                android:contentDescription="@string/laptop"
                android:src="@drawable/a3_laptop"
                android:layout_below="@id/iphone"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iphone"
                android:layout_toRightOf="@id/laptop"
                android:onClick="onClickShowAlert3"
                android:padding="35dp"
                android:text="@string/laptop"
                android:contentDescription="@string/description_laptop"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/drone"
                android:contentDescription="@string/drone"
                android:src="@drawable/a4_drone"
                android:layout_below="@id/laptop"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/laptop"
                android:layout_toRightOf="@id/drone"
                android:onClick="onClickShowAlert4"
                android:padding="35dp"
                android:text="@string/drone"
                android:contentDescription="@string/description_drone"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/film"
                android:contentDescription="@string/film"
                android:src="@drawable/a5_filme"
                android:layout_below="@id/drone"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/drone"
                android:layout_toRightOf="@id/film"
                android:onClick="onClickShowAlert5"
                android:padding="35dp"
                android:text="@string/film"
                android:contentDescription="@string/description_film"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/cam"
                android:contentDescription="@string/cam"
                android:src="@drawable/a6_nikon"
                android:layout_below="@id/film"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/film"
                android:layout_toRightOf="@id/cam"
                android:onClick="onClickShowAlert6"
                android:padding="35dp"
                android:text="@string/cam"
                android:contentDescription="@string/description_camera"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/gop"
                android:contentDescription="@string/gop"
                android:src="@drawable/a7_gopro"
                android:layout_below="@id/cam"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cam"
                android:layout_toRightOf="@id/gop"
                android:onClick="onClickShowAlert7"
                android:padding="35dp"
                android:text="@string/gop"
                android:contentDescription="@string/description_gopro"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/watch"
                android:contentDescription="@string/watch"
                android:src="@drawable/a8_watch"
                android:layout_below="@id/gop"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gop"
                android:layout_toRightOf="@id/watch"
                android:onClick="onClickShowAlert8"
                android:padding="35dp"
                android:text="@string/watch"
                android:contentDescription="@string/description_apple_watch"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/tv"
                android:contentDescription="@string/tv"
                android:src="@drawable/a9_tv"
                android:layout_below="@id/watch"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/watch"
                android:layout_toRightOf="@id/tv"
                android:onClick="onClickShowAlert9"
                android:padding="35dp"
                android:text="@string/tv"
                android:contentDescription="@string/description_tv"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/blu"
                android:contentDescription="@string/bluray"
                android:src="@drawable/a10_bluray"
                android:layout_below="@id/tv"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/tv"
                android:layout_toRightOf="@id/blu"
                android:text="@string/bluray"
                android:onClick="onClickShowAlert10"
                android:contentDescription="@string/description_bluray"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/min"
                android:contentDescription="@string/min"
                android:src="@drawable/a11_minadora"
                android:layout_below="@id/blu"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/blu"
                android:layout_toRightOf="@id/min"
                android:text="@string/min"
                android:onClick="onClickShowAlert11"
                android:contentDescription="@string/description_miner"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/wallet"
                android:contentDescription="@string/wallet"
                android:src="@drawable/a12_wallet"
                android:layout_below="@id/min"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/min"
                android:layout_toRightOf="@id/wallet"
                android:text="@string/wallet"
                android:onClick="onClickShowAlert12"
                android:contentDescription="@string/description_wallet"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/tablet"
                android:contentDescription="@string/tablet"
                android:src="@drawable/a13_tablet"
                android:layout_below="@id/wallet"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/wallet"
                android:layout_toRightOf="@id/tablet"
                android:text="@string/tablet"
                android:onClick="onClickShowAlert13"
                android:contentDescription="@string/description_tablet"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/snueve"
                android:contentDescription="@string/s9"
                android:src="@drawable/a14_s9"
                android:layout_below="@id/tablet"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/tablet"
                android:layout_toRightOf="@id/snueve"
                android:text="@string/s9"
                android:onClick="onClickShowAlert14"
                android:contentDescription="@string/description_s9"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/audi"
                android:contentDescription="@string/audi"
                android:src="@drawable/a15_audi"
                android:layout_below="@id/snueve"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/snueve"
                android:layout_toRightOf="@id/audi"
                android:text="@string/audi"
                android:onClick="onClickShowAlert15"
                android:contentDescription="@string/description_headphones"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/ps"
                android:contentDescription="@string/ps"
                android:src="@drawable/a16_ps"
                android:layout_below="@id/audi"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/audi"
                android:layout_toRightOf="@id/ps"
                android:text="@string/ps"
                android:onClick="onClickShowAlert16"
                android:contentDescription="@string/description_ps4"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/xbox"
                android:contentDescription="@string/xbox"
                android:src="@drawable/a17_xbox"
                android:layout_below="@id/ps"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/ps"
                android:layout_toRightOf="@id/xbox"
                android:text="@string/xbox"
                android:onClick="onClickShowAlert17"
                android:contentDescription="@string/description_xbox"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/corneta"
                android:contentDescription="@string/corneta"
                android:src="@drawable/a18_corneta"
                android:layout_below="@id/xbox"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/xbox"
                android:layout_toRightOf="@id/corneta"
                android:text="@string/corneta"
                android:onClick="onClickShowAlert18"
                android:contentDescription="@string/description_corneta"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/mouse"
                android:contentDescription="@string/mouse"
                android:src="@drawable/a19_mouse"
                android:layout_below="@id/corneta"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/corneta"
                android:layout_toRightOf="@id/mouse"
                android:text="@string/mouse"
                android:onClick="onClickShowAlert19"
                android:contentDescription="@string/description_mouse"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="@dimen/fab_margin"
                android:id="@+id/power"
                android:contentDescription="@string/power"
                android:src="@drawable/a20_power"
                android:layout_below="@id/mouse"
                android:onClick="addProduct"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:layout_below="@id/mouse"
                android:layout_toRightOf="@id/power"
                android:text="@string/power"
                android:onClick="onClickShowAlert20"
                android:contentDescription="@string/description_power"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>